--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <a href="raniesilva.github.io/Flags/index.html">Flags</a>
   </body>
 </html>
