--- a/Flags/index.html
+++ b/Flags/index.html
@@ -140,4 +140,7 @@ Youtube channel: youtube.com/channel/UCfR51smSEKhTpBmAIf7S05g
     </div>
     <script type="text/javascript" src="javascript/script.js"></script>
   </body>
+  <footer>
+    <small>Thanks Gustavo Silveira! [Youtube Channel]</small>
+  </footer>
 </html>
