--- a/Flags/index.html
+++ b/Flags/index.html
@@ -1,6 +1,7 @@
 <!--
-Thanks Gustavo Silveira!
-Youtube channel: youtube.com/channel/UCfR51smSEKhTpBmAIf7S05g
+Author: Ranie
+Thanks to: Gustavo Silveira
+Youtube Channel: https://www.youtube.com/channel/UCfR51smSEKhTpBmAIf7S05g
 -->
 <!DOCTYPE html>
 <html>
@@ -140,7 +141,8 @@ Youtube channel: youtube.com/channel/UCfR51smSEKhTpBmAIf7S05g
     </div>
     <script type="text/javascript" src="javascript/script.js"></script>
   </body>
-  <footer>
-    <small>Thanks Gustavo Silveira! [Youtube Channel]</small>
-  </footer>
+      <footer>
+        Thanks to: <a href="https://www.youtube.com/channel/UCfR51smSEKhTpBmAIf7S05g" target="_blank">Gustavo Silveira</a>
+      </footer>
+
 </html>
