--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head>
   </head>
   <body>
-    <a href="Flags/index.html">Flags</a>
+    <nav>
+      <ul><a href="Flags/index.html">Flags</a></ul>
+      <ul><a href="Flags/index.html">Flags</a></ul>
+    <nav>
+    
   </body>
 </html>
