--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   </head>
   <body>
     <nav>
-      <ul><a href="Flags/index.html">Flags</a></ul>
-      <ul><a href="Flags/index.html">Flags</a></ul>
+      <ul><li><a href="Flags/index.html">Flags</a></li></ul>
+      <ul><li><a href="Pong/index.html">Pong</a></li></ul>
     <nav>
     
   </body>
