--- a/Pong/index.html
+++ b/Pong/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Pong - WiLD</title>
+		<title>Soccer Pong</title>
 		<script type="text/javascript" src="js/phaser.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 		<style type="text/css">
@@ -69,6 +69,7 @@
 						plyr1 += 1;
 						console.log("Player 1: " + plyr1);
 					}else if(ball.body.blocked.right){
+						plyr2 += 1;
 						console.log("Player 2: " + plyr2);
 					}
 
