--- a/Pong/index.html
+++ b/Pong/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Soccer Pong</title>
-		<script type="text/javascript" src="js/phaser.min.js"></script>
+		<script type="text/javascript" src="../frameworks/javascript/phaser.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 		<style type="text/css">
 			*{
