--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
-<html>
-  <head>
-  </head>
-  <body>
-    <nav>
-      <ul><li><a href="Flags/index.html">Flags</a></li></ul>
-      <ul><li><a href="Pong/index.html">Pong</a></li></ul>
-    <nav>
-    
-  </body>
+<!DOCTYPE html>
+<html lang="pt-BR">
+    <head>
+        <title>Título</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-widthm initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+    <body>
+        <div class="container intro">
+            <h1>Preserve a natureza<br>do <span class="br">Br</span><span class="as">as</span><span class="il">il</span></h1>
+        </div>
+        <div class="container">
+            <div class="grid-12 sobre">
+                <h2>Monitoramento da Arara-azul</h2>
+
+                <p>O estudo da Dinâmica populacional da arara-azul-de-lear, espécie ameaçada de extinção e endêmica da caatinga, ocorre desde 2014 com o apoio da Fundação Biodiversitas (FB), do Instituto Arara Azul (ITA), e do Centro de Estudos de Migração de Aves (CEMAVE-ICMBio). É coordenado pela bióloga Erica Pacífico, doutoranda participante do Programa Ciências sem Fronteiras, CAPES, e também do Departamento de Biologia da Conservação da Estação Biológica de Doñana (EBD-CSIC), Espanha. O estudo é realizado em colaboração com o Museu de Zoologia da Universidade de São Paulo (MZUSP), e com o Laboratório de Genética Molecular de Aves da Universidade de São Paulo (LGEMA). Os trabalhos de campo são financiados pela World Parrot Trust (WPT), da Inglaterra, e pela Toyolex Veículos Concessionária, de Recife, e os trabalhos realizados em Laboratório são financiados pela Loro Parque Fundación, da España.</p>
+            </div>    
+            <div class="grid-3"></div>
+            <div class="grid-3"><img src="img/imagem-2.jpg"></div>
+            <div class="grid-3"><img src="img/imagem-1.jpg"></div>
+            <div class="grid-3"></div>    
+            <div class="grid-12 sobre">
+                <p>O monitoramento de ninhos começou na reserva privada da Fundação Biodiversitas, a Estação Biológica de Canudos (EBC), localmente conhecida como Toca Velha, com quem contamos com o apoio para estudar a Biologia Reprodutiva da espécie desde 2008. Com este estudo muitas perguntas surgiram sobre as estratégias de conservação da espécie em longo prazo. Com o monitoramento de ninhos desenvolvemos métodos alternativos e inovadores de marcação de psitacídeos, os quais nos permitem fazer seguimento e também estimativas da sobrevivência dos filhotes de araras-azuis-de-lear - após voarem de seus ninhos e se dispersarem na Caatinga. Assim, descobrimos novos dormitórios e áreas de reprodução das araras localizados em áreas remotas não protegidas. Estas áreas, em sua maioria, são zonas rurais que sofrem com a falta d’água. Portanto, contamos com o apoio dos moradores locais para que possamos acampar em suas propriedades e para conhecer locais históricos de ocorrência da arara-azul-de-lear. Fazemos entrevistas com os moradores mais antigos destes povoados de modo a descobrir mais sobre os processos de declínio populacional desta espécie.</p>
+            </div>
+            
+        </div>
+        <script src="js/script.js"></script>
+    </body>
 </html>
