--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>The King of Fighters</title>
+        <title>Blue Bird</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" type="text/css" href="css/style.css">
